# Quarc_Notes

./: .env.example  .gitignore  README.md  backup.sh  check.sh  deploy.sh  docker-compose.yml  restore.sh
.github/workflows/: desktop-release.yml
auth/: .env.example  Dockerfile  README.md  docker-compose.yml  migrate-from-music.js  package-lock.json  package.json
auth/src/: db.js  index.js
auth/src/routes/: auth.js
backend/: Dockerfile  package-lock.json  package.json
backend/src/: db.js  index.js
backend/src/routes/: attachments.js  pages.js  search.js  sync.js
backend/src/services/: content.js
desktop/: BUILD.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/i18n/: en.json  index.js  tr.json
frontend/src/lib/: api.js  apiUrl.js  db.js  freehand.js  freehandElement.js  inkMigration.js  sync.js  updateCheck.js
frontend/src/pages/Layout/: Layout.jsx  PageTree.jsx
frontend/src/pages/Login/: Login.jsx
frontend/src/pages/PageView/: BacklinksPanel.jsx  CanvasPage.jsx  Editor.jsx  PageView.jsx  WikilinkSpec.jsx
frontend/src/pages/Search/: Search.jsx
frontend/src/store/: authStore.js
mobile/: capacitor.config.json  package-lock.json  package.json
mobile/android/app/: build.gradle
(+7 files in other folders)
